discussion/kv_engine/186628/186628_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55269 Add db_history_file_size stat

db_history_file_size is the on disk size of the history that is retained
by a kvstore. It is reported in the diskinfo stat group.

Also clarify in the docs that db_data_size won't include unfragmented
data that is part of the history.

ns_server will use it to compute couch_docs_fragmentation as:
((db_file_size-db_history_file_size)-db_data_size)/
(db_file_size-db_history_file_size)

Change-Id: I48736ebf6a2a12367f363061fb63ce8af4823943

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2023-02-14 10:19:23.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-14 10:19:36.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/337837/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-14 10:26:44.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1352/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1352/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1089/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1089/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1151/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1151/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1140/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1140/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1125/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48: error: no viable overloaded "=" [clang-diagnostic-error]
    configuration.magmaCfg.GetHistoryTimestamp = magmakv::getCas;
                                               ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:396:7: note: candidate function not viable: no known conversion from "uint64_t (const magma::Slice &)" (aka "unsigned long (const magma::Slice &)") to "const std::function<std::chrono::duration<long, std::ratio<1, 1> > (const magma::Slice &)>" for 1st argument
      operator=(const function& __x)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:414:7: note: candidate function not viable: no known conversion from "uint64_t (const magma::Slice &)" (aka "unsigned long (const magma::Slice &)") to "std::function<std::chrono::duration<long, std::ratio<1, 1> > (const magma::Slice &)>" for 1st argument
      operator=(function&& __x) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:428:7: note: candidate function not viable: no known conversion from "uint64_t (const magma::Slice &)" (aka "unsigned long (const magma::Slice &)") to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      operator=(nullptr_t) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:457:2: note: candidate template ignored: requirement "_Callable<unsigned long (*)(const magma::Slice &), std::__invoke_result<unsigned long (*&)(const magma::Slice &), const magma::Slice &> >::value" was not satisfied [with _Functor = unsigned long (&)(const magma::Slice &)]
        operator=(_Functor&& __f)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:466:2: note: candidate template ignored: could not match "reference_wrapper<type-parameter-0-0>" against "unsigned long (*)(const magma::Slice &)"
        operator=(reference_wrapper<_Functor> __f) noexcept
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:599:46: error: no viable overloaded "=" [clang-diagnostic-error]
    configuration.magmaCfg.GetHistoryTimeNow = magmakv::getHistoryTimeNow;
                                             ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:396:7: note: candidate function not viable: no known conversion from "uint64_t ()" (aka "unsigned long ()") to "const std::function<std::chrono::duration<long, std::ratio<1, 1> > ()>" for 1st argument
      operator=(const function& __x)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:414:7: note: candidate function not viable: no known conversion from "uint64_t ()" (aka "unsigned long ()") to "std::function<std::chrono::duration<long, std::ratio<1, 1> > ()>" for 1st argument
      operator=(function&& __x) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:428:7: note: candidate function not viable: no known conversion from "uint64_t ()" (aka "unsigned long ()") to "std::nullptr_t" (aka "nullptr_t") for 1st argument
      operator=(nullptr_t) noexcept
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:457:2: note: candidate template ignored: requirement "_Callable<unsigned long (*)(), std::__invoke_result<unsigned long (*&)()> >::value" was not satisfied [with _Functor = unsigned long (&)()]
        operator=(_Functor&& __f)
        ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/std_function.h:466:2: note: candidate template ignored: could not match "reference_wrapper<type-parameter-0-0>" against "unsigned long (*)()"
        operator=(reference_wrapper<_Functor> __f) noexcept
        ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1125/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "=" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1125/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1141/ : FAILURE

Compile error at [2023-02-14T10:26:07.448Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:36:
error: cannot convert ?uint64_t? {aka ?long unsigned int?} to ?std::chrono::seconds? {aka ?std::chrono::duration<long int>?}
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1141/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1150/ : FAILURE

Compile error at [2023-02-14T10:21:36.622Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:466:36:
error: no viable conversion from "uint64_t" (aka "unsigned long") to "std::chrono::seconds" (aka "duration<long>")
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1150/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1116/ : FAILURE

Compile error at [2023-02-14T10:25:20.409Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "="
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1116/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1470/ : FAILURE

Compile error at [2023-02-14T10:23:21.726Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:598:48:
error: no viable overloaded "="
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1470/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22666/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1151/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
